--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,8 +9,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(229, 255, 212, 0.87);
+  background-color: #3d300d;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -20,11 +20,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #e3ffd4;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #beff9e;
 }
 
 body {
@@ -47,12 +47,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #5f4f2b;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #ffc7e4;
+  border-color: #9dca86;
 }
 button:focus,
 button:focus-visible {
@@ -70,4 +70,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+input.custom {
+  accent-color: #e2dc6d;
 }
